--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="hero-image">
     <div class="profile-card">
         <div class="profile-image-container">
-            <img src="/media/linkedinPP.png" alt="Mazhar Ali Mansuri - DevOps Engineer" class="profile-image">
+            <img src="https://drive.google.com/file/d/1iI-IK2ERSdYN278bfOfLUKQbn13ldt8F/view?usp=sharing" alt="Mazhar Ali Mansuri - DevOps Engineer" class="profile-image">
             <div class="profile-overlay">
                 <div class="profile-status">
                     <span class="status-indicator"></span>
