--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="hero-image">
     <div class="profile-card">
         <div class="profile-image-container">
-            <img src="https://github.com/mazharali23/Portfolio-Website/blob/main/media/linkedinPP.png" alt="Mazhar Ali Mansuri - DevOps Engineer" class="profile-image">
+            <img src="/media/linkedinPP.png" alt="Mazhar Ali Mansuri - DevOps Engineer" class="profile-image">
             <div class="profile-overlay">
                 <div class="profile-status">
                     <span class="status-indicator"></span>
